# ft_malloc

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
inc/: ft_malloc.h
src/: calloc.c  free.c  ft_defragment.c  ft_find_block_size.c  ft_free_small_zone.c  ft_get_new_zone_size.c  ft_malloc_multithread.c  ft_memory_allocation.c  ft_unite_with_next.c  get_malloc_manager.c  malloc.c  realloc.c  show_alloc_mem.c  utilits.c
